--- a/solutions.html
+++ b/solutions.html
@@ -34,7 +34,9 @@
     <h1>ES6 Training</h1>
     <section>
       <h1>Test Suites</h1>
-      <ul class="suites-list js-suites-list"></ul>
+      <ul class="suites-list js-suites-list"> 
+        <li class="js-run-all-tests-item"><button>Run All Tests</button></li>
+      </ul>
     </section> 
     <section>
       <h1>Test Results</h1>
